; ModuleID = '/home/carl/AnghaBench/ZipArchive/SSZipArchive/minizip/extr_mz_os_posix.c_mz_os_set_file_date.c'
source_filename = "/home/carl/AnghaBench/ZipArchive/SSZipArchive/minizip/extr_mz_os_posix.c_mz_os_set_file_date.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.utimbuf = type { i8*, i8* }

@MZ_INTERNAL_ERROR = common dso_local global i32 0, align 4
@MZ_OK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @mz_os_set_file_date(i8* %0, i8* %1, i8* %2, i8* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca %struct.utimbuf, align 8
  store i8* %0, i8** %6, align 8
  store i8* %1, i8** %7, align 8
  store i8* %2, i8** %8, align 8
  store i8* %3, i8** %9, align 8
  %11 = load i8*, i8** %8, align 8
  %12 = getelementptr inbounds %struct.utimbuf, %struct.utimbuf* %10, i32 0, i32 1
  store i8* %11, i8** %12, align 8
  %13 = load i8*, i8** %7, align 8
  %14 = getelementptr inbounds %struct.utimbuf, %struct.utimbuf* %10, i32 0, i32 0
  store i8* %13, i8** %14, align 8
  %15 = load i8*, i8** %9, align 8
  %16 = call i32 @MZ_UNUSED(i8* %15)
  %17 = load i8*, i8** %6, align 8
  %18 = call i64 @utime(i8* %17, %struct.utimbuf* %10)
  %19 = icmp ne i64 %18, 0
  br i1 %19, label %20, label %22

20:                                               ; preds = %4
  %21 = load i32, i32* @MZ_INTERNAL_ERROR, align 4
  store i32 %21, i32* %5, align 4
  br label %24

22:                                               ; preds = %4
  %23 = load i32, i32* @MZ_OK, align 4
  store i32 %23, i32* %5, align 4
  br label %24

24:                                               ; preds = %22, %20
  %25 = load i32, i32* %5, align 4
  ret i32 %25
}

declare dso_local i32 @MZ_UNUSED(i8*) #1

declare dso_local i64 @utime(i8*, %struct.utimbuf*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
